--- a/Part 4. Database/Quest 15. ORM/skeleton/client/style.css
+++ b/Part 4. Database/Quest 15. ORM/skeleton/client/style.css
@@ -1,3 +1,16 @@
 * {
 	/* TODO: 필요한 CSS를 채워넣어 보세요! */
 }
+
+textarea {
+	margin-top: 20px;
+	
+}
+
+.btn-group {
+	margin-top: 20px;
+}
+
+.container {
+	padding-top: 20px;
+}
